--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" width="20" type="image/svg+xml" href="./public/images/light-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React + TS</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet" />  
-</head>
-<style>
-  /* // <uniquifier>: Use a unique and descriptive class name */
-/* // <weight>: Use a value from 100 to 900 */
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet" />
 
-.lexend {
-  font-family: "Lexend", serif;
-  font-optical-sizing: auto;
-}
-</style>
+ </head>
+ <style>
+  /* // <uniquifier>: Use a unique and descriptive class name */
+  /* // <weight>: Use a value from 100 to 900 */
+
+  .lexend {
+   font-family: "Lexend", serif;
+   font-optical-sizing: auto;
+  }
+ </style>
  <body>
   <div id="root" class="lexend"></div>
   <script type="module" src="/src/main.tsx"></script>
